<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.yakir.gradeavg.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/course_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/course_name_hint"
            android:inputType="textPersonName|textCapWords"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/grade_edit_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/grade_hint"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/credits_edit_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/credits_hint"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>


    <Button
        android:id="@+id/add_to_grades_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addToGrades"
        android:text="@string/add_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

    <TextView
        android:id="@+id/total_avg_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:maxLength="21"
        android:text="@string/avarage" />

    <TextView
        android:id="@+id/total_credit_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/credit_point" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_grades_list_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"/>
</LinearLayout>
